--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "echarts": "^4.3.0",
+    "element-ui": "^2.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
